fixed background to stretch

--- a/templates/bootstrap/css/style.css
+++ b/templates/bootstrap/css/style.css
@@ -1,7 +1,10 @@
 body {
     background-image: url("bkgd.jpg");
-    color: white;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
 }
-#authors {
-    color: white;
+color: white;
 }
+ #authors {
+     color: white;
+ }
